# cros-ec-rs

./: Cargo.toml  README.md
examples/: hello.rs
src/: consts.rs  error.rs  interfaces.rs  lib.rs  types.rs
src/cmds/: consts.rs  fw_charge_limit.rs  get_cmd_versions.rs  get_features.rs  hello.rs  mod.rs  prelude.rs  proto_version.rs
src/cmds/flash_info/: flags.rs  mod.rs  v0.rs  v1.rs  v2.rs
src/cmds/fw_charge_limit/: consts.rs  mod.rs  raw.rs  safe.rs
src/cmds/get_version/: mod.rs  prelude.rs  v0.rs  v1.rs
src/cmds/pwm/: get_fan_target_rpm.rs  mod.rs  set_duty.rs  set_fan_duty.rs  set_fan_target_rpm.rs
src/cmds/thermal/: auto_fan_ctrl.rs  mod.rs
src/interfaces/: dev.rs  mod.rs
src/interfaces/dev/: chk_v1.rs  dynamic.rs  error.rs  iface.rs  mod.rs  traits.rs  v1.rs  v2.rs  version.rs
src/interfaces/dev/v1/: check.rs  command.rs  consts.rs  iface.rs  mod.rs
src/interfaces/dev/v2/: command.rs  consts.rs  iface.rs  mod.rs  readmem.rs
src/memmap/: mod.rs
src/memmap/pwm/: mod.rs
src/traits/: base.rs  exts.rs  mod.rs
src/traits/exts/: command.rs  readmem.rs
src/types/: command.rs  command_info.rs  cstring.rs  mod.rs  version_mask.rs
src/types/features/: desc.rs  exts.rs  flags.rs  mod.rs  proxy.rs
src/utils/: invalid_response.rs  mod.rs  slice.rs
