[package]
name = "cros-ec"
version = "0.1.0"
authors = ["fnrir"]
edition = "2024"
rust-version = "1.88"
description = "ChromeOS EC interface crate"
readme = "README.md"
repository = "https://github.com/fnr1r/cros-ec-rs"

[dependencies]
constcat = "0.6"
derive-new = "0.7"
easy-ext = "1"
libc = "0.2"
paste = "1"
plain = "0.2"
rustix = "1"
slice-dst = "1.6"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
anyhow = "1"
