[package]
name = "cros-ec"
version = "0.1.0"
authors = ["fnrir"]
edition = "2024"
rust-version = "1.88"
description = "ChromeOS EC interface crate"
readme = "README.md"
repository = "https://github.com/fnr1r/cros-ec-rs"

[dependencies]
bstr = { version = "1.12", default-features = false }
constcat = "0.6"
derive-new = "0.7"
easy-ext = "1"
enumflags2 = "0.7"
libc = "0.2"
paste = "1"
plain = "0.2"
rustix = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"

[dependencies.derive_more]
version = "2"
features = ["deref"]

[dependencies.unslice-dst]
git = "https://github.com/fnr1r/unslice-dst.git"
rev = "v0.1.2_cros-ec"

[dev-dependencies]
anyhow = "1"
